k8s/wordpress/tests/busybox.yaml
# This is a sample pod definition for using SecretProviderClass and the user-assigned identity to access your key vault
kind: Pod
apiVersion: v1
metadata:
  name: busybox-secrets-store-inline-user-msi
  namespace: wordpress
spec:
  containers:
    - name: busybox
      image: registry.k8s.io/e2e-test-images/busybox:1.29-4
      command:
        - "/bin/sleep"
        - "10000"
      volumeMounts:
      - name: secrets-store01-inline
        mountPath: "/mnt/secrets-store"
        readOnly: true
      env:
        - name: MYSQL_DATABASE_USER
          valueFrom:
            secretKeyRef:
              name: keyvault-secrets
              key: mysql-database-user
        - name: MYSQL_DATABASE_HOST
          valueFrom:
            secretKeyRef:
              name: keyvault-secrets
              key: mysql-database-host
        - name: MYSQL_DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: keyvault-secrets
              key: mysql-database-password
        - name: MYSQL_DATABASE_NAME
          valueFrom:
            secretKeyRef:
              name: keyvault-secrets
              key: mysql-database-name
  volumes:
    - name: secrets-store01-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "keyvault-secret-class"
